fix text paragraphs overflow and unique constraint error handling on questions

--- a/web-application/src/presentation-layer/public/css/layout.css
+++ b/web-application/src/presentation-layer/public/css/layout.css
@@ -156,3 +156,7 @@ h1, h2, h3, h4 {
     margin-top: 15px;
 }
 
+p.textPost, h3.textPost {
+    word-wrap: break-word;
+}
+
